Add shutdown script timeout
