# coderd/apidoc/swagger.json
@@ -4518,6 +4518,9 @@
         "shutdown_script": {
           "type": "string"
         },
+        "shutdown_script_timeout": {
+          "type": "integer"
+        },
         "startup_script": {
           "type": "string"
         },
@@ -7334,6 +7337,9 @@
         },
         "shutdown_script": {
           "type": "string"
+        },
+        "shutdown_script_timeout_seconds": {
+          "type": "integer"
         },
         "startup_script": {
           "type": "string"
